fix: PostItem flex gap 설정 및 shadow 수정

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -2,5 +2,6 @@
     box-shadow: 0px 6px 4px -2px rgba(16, 24, 40, 0.03), 0px 16px 12px -4px rgba(16, 24, 40, 0.08);
 }
 
-// box-shadow: 0px 6px 4px -2px rgba(16, 24, 40, 0.03);
-// box-shadow: 0px 16px 12px -4px rgba(16, 24, 40, 0.08);
+.post-shadow {
+    box-shadow: 0px 6px 4px -2px rgba(16, 24, 40, 0.03), 0px 16px 12px -4px rgba(16, 24, 40, 0.08);
+}
